--- a/face.html
+++ b/face.html
@@ -10,9 +10,10 @@
     <div class="wrapper">
         <video class="webcam"></video>
         <canvas class="video"></canvas>
-        <canvas class="faceDetection"></canvas>
+        <canvas class="face-detection"></canvas>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
     <script src="face-censor.js"></script>
     
 </body>
