complete face detection censor

--- a/face.html
+++ b/face.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/face.css">
     <title>Face Censorship</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/face-api.js@0.22.2/dist/face-api.min.js"></script>
-    <script src="face-censor.js"></script>
+    <script src="./assets/js/face-censor.js"></script>
     
 </body>
 </html>
